--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.12.17",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0"
   }
 }
