--- a/jsfront/package.json
+++ b/jsfront/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.22.5",
     "@types/react-datepicker": "^4.11.2",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
